# SHERLOCKAI

./: .gitignore  README.md  SherlockAI_Documentation.docx  docker-compose.yml  render.yaml
maintenance-wizard/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
maintenance-wizard/backend/: __init__.py
maintenance-wizard/backend/app/: __init__.py  container.py  main.py
maintenance-wizard/backend/app/agents/: __init__.py  contracts.py  demo_cache.py  events.py  factory.py  loop.py  orchestrator.py  prompts.py  provenance.py  schemas.py  specialists.py
maintenance-wizard/backend/app/api/: __init__.py  app.py  deps.py  schemas.py  sse.py
maintenance-wizard/backend/app/conversation/: __init__.py  memory.py
maintenance-wizard/backend/app/core/: __init__.py  channels.py  config.py  logging.py
maintenance-wizard/backend/app/data_access/: __init__.py  db.py  loader.py  repositories.py  sensors.py
maintenance-wizard/backend/app/feedback/: __init__.py  context.py
maintenance-wizard/backend/app/llm/: __init__.py  base.py  messages.py  rate_limit.py  tiers.py
maintenance-wizard/backend/app/ml/: __init__.py  alpha_defect.py  (+4 more)
maintenance-wizard/backend/demo_cache/: README.md
maintenance-wizard/backend/scripts/: __init__.py  build_index.py  capture_demo_cache.py  chat_demo.py  hello_agent.py  proactive_demo.py  serve.py  train_models.py
maintenance-wizard/backend/tests/: __init__.py  conftest.py  fakes.py
maintenance-wizard/data/: .gitkeep  README.md
maintenance-wizard/data/data_dictionary/: README.md  coil_log.md  delay_logs.md  documents.md  equipment_master.md  fault_catalog.md  incident_records.md  maintenance_history.md  process_conditions.md  round1_hotrolling.md  sensors_schema.md  spare_parts_master.md  users_and_logbook.md
maintenance-wizard/data/processed/: round1_profile.json
maintenance-wizard/data/round1_hotrolling/: README.md  test.csv  train.csv
maintenance-wizard/docs/: architecture.md
maintenance-wizard/docs/adr/: 0001-agent-orchestration.md  0002-data-substrate.md  0003-retrieval-and-tools.md  0004-ml-predictive-layer.md  0005-agentic-core.md  0006-proactive-and-feedback.md  0007-api-layer.md  0008-frontend-portal.md  0009-entra-oauth.md  0010-demo-cache.md
maintenance-wizard/frontend/: .env.example  .eslintrc.cjs  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
maintenance-wizard/frontend/src/: App.tsx  index.css  main.tsx
maintenance-wizard/models/: .gitkeep
maintenance-wizard/scripts/: dev.sh
(+248 files in other folders)
